# singapore-skillsfuture-courses

./: .gitignore  .pre-commit-config.yaml  README.md  course_details.py  pyproject.toml  run.sh
archive/: course_details.py
extractor_courses/: main.py
extractor_courses/courses/: api_client.py  config.py  data_models.py  data_processing.py  preflight.py
extractor_details/: main.py
extractor_details/course_details/: api_utils.py  config.py  data_models.py  data_parsing.py  database_utils.py  preflight.py
modelling/: course_runs.py  courses.py  trainers.py  training_locations.py  training_providers.py
